Fix Docker build